--- a/php/7.4/Dockerfile
+++ b/php/7.4/Dockerfile
@@ -10,7 +10,7 @@ RUN set -ex; \
 	\
 	pecl install redis && docker-php-ext-enable redis; \
 	\
-	docker-php-ext-configure gd --with-png-dir=/usr --with-jpeg-dir=/usr --with-freetype-dir=/usr; \
+	docker-php-ext-configure gd --with-jpeg=/usr --with-freetype=/usr; \
 	docker-php-ext-install gd; \
 	\
 	docker-php-ext-install pdo_mysql bcmath sockets; \
