--- a/php-cli/7.4/Dockerfile
+++ b/php-cli/7.4/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:7.2-cli-alpine
+FROM php:7.4-cli-alpine
 
 RUN set -ex; \
 	\
@@ -7,7 +7,7 @@ RUN set -ex; \
 	\
 	pecl install redis && docker-php-ext-enable redis; \
 	\
-	docker-php-ext-configure gd --with-png-dir=/usr --with-jpeg-dir=/usr --with-freetype-dir=/usr --with-webp-dir=/usr; \
+	docker-php-ext-configure gd --with-jpeg --with-freetype --with-webp; \
 	docker-php-ext-install gd; \
 	\
 	docker-php-ext-install pdo_mysql bcmath sockets; \
